tests/samples/negative/functions/pub_inferred_return.ax
module pub_inferred_return;

pub fn answer() {
    return 42;
}
